# EBNet

./: README.md  ebnet_predict.py  example.ipynb  inference_interface.ipynb  pyproject.toml  requirements.txt
ebnet/: __init__.py  __main__.py  chop_model.py  config.yaml  dataset.py  denorm.py  model.py  pipeline.py  runner.py  test.py
